# pkg/model/product.go
@@ -1,0 +1,10 @@
+package globalModel
+
+type Product struct {
+	Id          string `json:"id"`
+	Name        string `json:"name"`
+	Description string `json:"description"`
+	Color       string `json:"color"`
+	Price       int64  `json:"price"`
+	ImageURL    string `json:"imageURL"`
+}
